--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ nav:
     - Games: games/index.md
     - Halo Infinite: games/halo-infinite.md
     - "Minecraft: Java Edition": games/minecraft-java.md
+    - "Minecraft: Bedrock Edition": games/minecraft-bedrock.md
 copyright: >
   <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>
   <br />mmh ah yes tweak tips 👍
